# uefi-websim

./: Cargo.toml  LICENSE  README.md
cfg/: gaming.yaml  thinkpad.yaml
src/: config.rs  main.js  main.rs  templates.rs
src/html/: category.html.in  dropdown_opt.html.in  landing.html.in  menu.html.in
styles/: gaming.css  gaming.html  lenovo.css
templates/: category.html  category_link.html  dropdown.html  dropdown_opt.html  home.html  home_table.html  landing.html  main.html  menu.html  switch.html
