[package]
name = "uefi-websim"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["serde-yaml", "with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.8.1", features = ["macros"] }
convert_case = "0.8.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_yaml = "0.9.34+deprecated"
tokio = { version = "1.44.1", features = ["full"] }
